# rvpm

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile.toml  README.md  demo.tape  store.tape
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/: browse.rs  browse_tui.rs  chezmoi.rs  cmd_scan.rs  config.rs  doctor.rs  external_render.rs  fetch_state.rs  git.rs  helptags.rs  link.rs  loader.rs  lockfile.rs  main.rs  main.rs_head.txt  main.rs_tail.txt  merge_conflicts.rs  plugin_scan.rs  profile.rs  profile_tui.rs  store.rs  store_tui.rs  tui.rs  update_log.rs
src/ai/: chat.rs  mod.rs  prompt.rs  schema_prompt.md
vhs/: .dockerignore  Dockerfile  browse.tape  demo.tape  profile.tape  regen.sh  store.tape
